[package]
name = "http_server_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
# Low-level async I/O abstraction (epoll/kqueue/IOCP)
mio = { version = "1.0", features = ["net", "os-poll"] }

# POSIX/Linux syscalls (setsockopt, etc.)
nix = { version = "0.29", default-features = false, features = ["socket", "net"] }

crossbeam = "0.8.4"

io-uring = "0.7"